--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     
     <!-- MOBILE TOP-NAV -->
     <div class="mobile-nav">
-        <a id="mobile-logo" href="index.php"></a>
+        <a id="mobile-logo" href="index.html"></a>
         <div class="mobile-menu-container">
             <span class="mobile-menu-icon"></span>
         </div>
@@ -28,19 +28,19 @@
     <!-- DESKTOP TOP-NAV -->
     <nav class="top-nav">
         <ul>
-            <a id="logo" href="index.php"></a>
+            <a id="logo" href="index.html"></a>
             <li class="active-link"><a href="#">Αρχική Σελίδα</a></li>
             <li class="dropdown-btn">
                 <a href="#">Πληροφορίες<span class="caret"></span></a>
                 <ul class="dropdown">
-                    <li><a href="dates.php">Ημερομηνίες</a></li>
+                    <li><a href="dates.html">Ημερομηνίες</a></li>
                     <li><a href="#">Επιλογή 2</a></li>
                     <li><a href="#">Επιλογή 3</a></li>
                     <li><a href="#">Επιλογή 4</a></li>
                 </ul>
             </li>
             <li><a href="#">Υποβολή Περιλήψεων</a></li>
-            <li><a href="program.php">Πρόγραμμα</a></li>
+            <li><a href="program.html">Πρόγραμμα</a></li>
         </ul>
     </nav>
     <!-- END OF DESKTOP TOP-NAV -->
