--- a/program.html
+++ b/program.html
@@ -8,9 +8,9 @@
     <title>1η ΠΑΓΚΥΠΡΙΑ ΗΜΕΡΙ∆Α ΣΤΑΤΙΣΤΙΚΗΣ ΕΠΙΣΤΗΜΗΣ - Πρόγραμμα</title>
 
     <!-- CSS & CUSTOM FONTS -->
-    <link href="../css/style.css" rel="stylesheet" />
-    <link href="../css/animate.css" rel="stylesheet" />
-    <link href="../css/infinite-slider.css" rel="stylesheet" />
+    <link href="style.css" rel="stylesheet" />
+    <link href="animate.css" rel="stylesheet" />
+    <link href="infinite-slider.css" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 </head>
 
@@ -18,7 +18,7 @@
 
     <!-- MOBILE TOP-NAV -->
     <div class="mobile-nav">
-        <a id="mobile-logo" href="index.php"></a>
+        <a id="mobile-logo" href="index.html"></a>
         <div class="mobile-menu-container">
             <span class="mobile-menu-icon"></span>
         </div>
@@ -28,12 +28,12 @@
     <!-- DESKTOP TOP-NAV -->
     <nav class="top-nav">
         <ul>
-            <a id="logo" href="index.php"></a>
-            <li><a href="index.php">Αρχική Σελίδα</a></li>
+            <a id="logo" href="index.html"></a>
+            <li><a href="index.html">Αρχική Σελίδα</a></li>
             <li class="dropdown-btn">
                 <a href="#">Πληροφορίες<span class="caret"></span></a>
                 <ul class="dropdown">
-                    <li><a href="dates.php">Ημερομηνίες</a></li>
+                    <li><a href="dates.html">Ημερομηνίες</a></li>
                     <li><a href="#">Επιλογή 2</a></li>
                     <li><a href="#">Επιλογή 3</a></li>
                     <li><a href="#">Επιλογή 4</a></li>
@@ -58,13 +58,13 @@
             <div class="co-organizers">
                 <div class='photo-roll-container'>
                     <div class='photo-roll'>
-                        <img src="../logos/Uclan-Logo.jpg" alt="UCLan Cyprus" onclick="window.open('http://www.uclancyprus.ac.cy/en/')" title="Επισκέψου την Ιστοσελίδα">
-                        <img src="../logos/CUT-logo.png" alt="Τεχνολογικό Πανεπιστήμιο Κύπρου" onclick="window.open('http://www.cut.ac.cy/?languageId=1')" title="Επισκέψου την Ιστοσελίδα">
-                        <img src="../logos/University%20of%20Cyprus-Logo.png" alt="University of Cyprus" onclick="window.open('http://www.ucy.ac.cy/el/')" title="Επισκέψου την Ιστοσελίδα">
-                        <img src="../logos/Open%20University%20of%20Cyprus-Logo.png" alt="Open University of Cyprus" onclick="window.open('http://www.ouc.ac.cy/')" title="Επισκέψου την Ιστοσελίδα">
-                        <img class="big" src="../logos/Frederick%20University-Logo.png" alt="Frederick University" onclick="window.open('http://www.frederick.ac.cy/')" title="Επισκέψου την Ιστοσελίδα">
-                        <img class="big" src="../logos/European%20University%20of%20Cyprus-Logo.png" alt="European University of Cyprus" onclick="window.open('http://www.euc.ac.cy/')" title="Επισκέψου την Ιστοσελίδα">
-                        <img src="../logos/University%20of%20Nicosia-Logo.png" alt="University of Nicosia" onclick="window.open('https://www.unic.ac.cy/')" title="Επισκέψου την Ιστοσελίδα">
+                        <img src="Uclan-Logo.jpg" alt="UCLan Cyprus" onclick="window.open('http://www.uclancyprus.ac.cy/en/')" title="Επισκέψου την Ιστοσελίδα">
+                        <img src="CUT-logo.png" alt="Τεχνολογικό Πανεπιστήμιο Κύπρου" onclick="window.open('http://www.cut.ac.cy/?languageId=1')" title="Επισκέψου την Ιστοσελίδα">
+                        <img src="University%20of%20Cyprus-Logo.png" alt="University of Cyprus" onclick="window.open('http://www.ucy.ac.cy/el/')" title="Επισκέψου την Ιστοσελίδα">
+                        <img src="Open%20University%20of%20Cyprus-Logo.png" alt="Open University of Cyprus" onclick="window.open('http://www.ouc.ac.cy/')" title="Επισκέψου την Ιστοσελίδα">
+                        <img class="big" src="Frederick%20University-Logo.png" alt="Frederick University" onclick="window.open('http://www.frederick.ac.cy/')" title="Επισκέψου την Ιστοσελίδα">
+                        <img class="big" src="European%20University%20of%20Cyprus-Logo.png" alt="European University of Cyprus" onclick="window.open('http://www.euc.ac.cy/')" title="Επισκέψου την Ιστοσελίδα">
+                        <img src="University%20of%20Nicosia-Logo.png" alt="University of Nicosia" onclick="window.open('https://www.unic.ac.cy/')" title="Επισκέψου την Ιστοσελίδα">
                     </div>
                 </div>
             </div>
@@ -73,10 +73,10 @@
     </div>
 
     <!-- JAVASCRIPT -->
-    <script src="../js/jquery-3.2.1.min.js"></script>
-    <script src="../js/topNav.js"></script>
-    <script src="../js/jquery.viewportchecker.js"></script>
-    <script src="../js/animateAndSlider.js"></script>
+    <script src="jquery-3.2.1.min.js"></script>
+    <script src="topNav.js"></script>
+    <script src="jquery.viewportchecker.js"></script>
+    <script src="animateAndSlider.js"></script>
 
 </body>
 
