--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <!-- MOBILE TOP-NAV -->
     <div class="mobile-nav">
-        <a id="mobile-logo" href="index.php"></a>
+        <a id="mobile-logo" href="index.html"></a>
         <div class="mobile-menu-container">
             <span class="mobile-menu-icon"></span>
         </div>
@@ -29,20 +29,20 @@
     <!-- DESKTOP TOP-NAV -->
     <nav class="top-nav">
         <ul>
-            <a id="logo" href="index.php"></a>
-            <li class="active-link"><a href="index.php">Αρχική Σελίδα</a></li>
+            <a id="logo" href="index.html"></a>
+            <li class="active-link"><a href="index.html">Αρχική Σελίδα</a></li>
             <li class="dropdown-btn">
                 <a href="#">Πληροφορίες<span class="caret"></span></a>
                 <ul class="dropdown">
-                    <li><a href="registration.php">Εγγραφή Συμμετεχόντων</a></li>
-                    <li><a href="papers.php">Πρόσκληση Υποβολής Εργασιών</a></li>
-                    <li><a href="dates.php">Σημαντικές Ημερομηνίες</a></li>
-                    <li><a href="committee.php">Οργανωτική επιτροπή</a></li>
-                    <li><a href="venue.php">Χώρος Διεξαγωγής</a></li>
+                    <li><a href="registration.html">Εγγραφή Συμμετεχόντων</a></li>
+                    <li><a href="papers.html">Πρόσκληση Υποβολής Εργασιών</a></li>
+                    <li><a href="dates.html">Σημαντικές Ημερομηνίες</a></li>
+                    <li><a href="committee.html">Οργανωτική επιτροπή</a></li>
+                    <li><a href="venue.html">Χώρος Διεξαγωγής</a></li>
                 </ul>
             </li>
             <li><a href="#">Υποβολή Περιλήψεων</a></li>
-            <li><a href="sponsors.php">Χορηγοί</a></li>
+            <li><a href="sponsors.html">Χορηγοί</a></li>
         </ul>
     </nav>
     <!-- END OF DESKTOP TOP-NAV -->
@@ -71,12 +71,12 @@
             </div>
 
 
-            <div class="introduction">Waiting for Ms Milto...<br><a class="more-btn" href="papers.php">Περισσότερα...</a></div>
+            <div class="introduction">Waiting for Ms Milto...<br><a class="more-btn" href="papers.html">Περισσότερα...</a></div>
 
             <div id="center" class="introduction"><b><i>«Χώρος διεξαγωγής»</i></b>
             </div>
 
-            <div class="introduction">Tο UCLan Cyprus λειτουργεί από τον Οκτώβριο του 2012 ως εγγεγραμμένο Iδιωτικό Πανεπιστήμιο στην Κύπρο, προσφέροντας άριστη βρετανική ανώτατη εκπαίδευση σε πτυχιακό και μεταπτυχιακό επίπεδο. Στρατηγικό όραμά του είναι να οικοδομήσει ένα κορυφαίο, σύγχρονο πανεπιστήμιο, αναγνωρισμένο για την παροχή μιας μοναδικής φοιτητικής εμπειρίας, καθώς και για την προσφορά του στη διεθνή έρευνα και καινοτόμο μάθηση. Επιμέρους στόχος είναι η ανάδειξη της Κύπρου ως διεθνές εκπαιδευτικό κέντρο.<br> <a class="more-btn" href="venue.php">Περισσότερα...</a></div>
+            <div class="introduction">Tο UCLan Cyprus λειτουργεί από τον Οκτώβριο του 2012 ως εγγεγραμμένο Iδιωτικό Πανεπιστήμιο στην Κύπρο, προσφέροντας άριστη βρετανική ανώτατη εκπαίδευση σε πτυχιακό και μεταπτυχιακό επίπεδο. Στρατηγικό όραμά του είναι να οικοδομήσει ένα κορυφαίο, σύγχρονο πανεπιστήμιο, αναγνωρισμένο για την παροχή μιας μοναδικής φοιτητικής εμπειρίας, καθώς και για την προσφορά του στη διεθνή έρευνα και καινοτόμο μάθηση. Επιμέρους στόχος είναι η ανάδειξη της Κύπρου ως διεθνές εκπαιδευτικό κέντρο.<br> <a class="more-btn" href="venue.html">Περισσότερα...</a></div>
 
 
         </div>
