--- a/venue.html
+++ b/venue.html
@@ -8,10 +8,10 @@
     <title>1η ΠΑΓΚΥΠΡΙΑ ΗΜΕΡΙ∆Α ΣΤΑΤΙΣΤΙΚΗΣ ΕΠΙΣΤΗΜΗΣ - Σημαντικές Ημερομηνίες</title>
 
     <!-- CSS & CUSTOM FONTS -->
-    <link href="../css/style.css" rel="stylesheet" />
-    <link href="../css/animate.css" rel="stylesheet" />
-    <link href="../css/infinite-slider.css" rel="stylesheet" />
-    <link href="../lightbox/dist/css/lightbox.css" rel="stylesheet" />
+    <link href="style.css" rel="stylesheet" />
+    <link href="animate.css" rel="stylesheet" />
+    <link href="infinite-slider.css" rel="stylesheet" />
+    <link href="lightbox.css" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css?family=Roboto:300" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
 </head>
@@ -20,7 +20,7 @@
 
     <!-- MOBILE TOP-NAV -->
     <div class="mobile-nav">
-        <a id="mobile-logo" href="index.php"></a>
+        <a id="mobile-logo" href="index.html"></a>
         <div class="mobile-menu-container">
             <span class="mobile-menu-icon"></span>
         </div>
@@ -30,20 +30,20 @@
     <!-- DESKTOP TOP-NAV -->
     <nav class="top-nav">
         <ul>
-            <a id="logo" href="index.php"></a>
-            <li><a href="index.php">Αρχική Σελίδα</a></li>
+            <a id="logo" href="index.html"></a>
+            <li><a href="index.html">Αρχική Σελίδα</a></li>
             <li class="dropdown-btn">
                 <a href="#">Πληροφορίες<span class="caret"></span></a>
                 <ul class="dropdown">
-                    <li><a href="registration.php">Εγγραφή Συμμετεχόντων</a></li>
-                    <li><a href="papers.php">Πρόσκληση Υποβολής Εργασιών</a></li>
-                    <li><a href="dates.php">Σημαντικές Ημερομηνίες</a></li>
-                    <li><a href="committee.php">Οργανωτική επιτροπή</a></li>
-                    <li class="active-dropdown"><a href="venue.php">Χώρος Διεξαγωγής</a></li>
+                    <li><a href="registration.html">Εγγραφή Συμμετεχόντων</a></li>
+                    <li><a href="papers.html">Πρόσκληση Υποβολής Εργασιών</a></li>
+                    <li><a href="dates.html">Σημαντικές Ημερομηνίες</a></li>
+                    <li><a href="committee.html">Οργανωτική επιτροπή</a></li>
+                    <li class="active-dropdown"><a href="venue.html">Χώρος Διεξαγωγής</a></li>
                 </ul>
             </li>
             <li><a href="#">Υποβολή Περιλήψεων</a></li>
-            <li><a href="sponsors.php">Χορηγοί</a></li>
+            <li><a href="sponsors.html">Χορηγοί</a></li>
         </ul>
     </nav>
     <!-- END OF DESKTOP TOP-NAV -->
@@ -54,9 +54,9 @@
             <div class="introduction">
 
                 <div class="cnt">
-                    <img class="mySlides" src="../statistics-images/uclan_cyprus.jpg" style="width:100%">
-                    <img class="mySlides" src="../statistics-images/uclan_cyprus2.jpg" style="width:100%">
-                    <img class="mySlides" src="../statistics-images/uclan_cyprus3.jpg" style="width:100%">
+                    <img class="mySlides" src="uclan_cyprus.jpg" style="width:100%">
+                    <img class="mySlides" src="uclan_cyprus2.jpg" style="width:100%">
+                    <img class="mySlides" src="uclan_cyprus3.jpg" style="width:100%">
 
 
                     <button class="left-btn" onclick="plusDivs(-1)">&#10094;</button>
@@ -70,10 +70,10 @@
 
             <div class="introduction" id="center"><span class="photos-title">Photos</span></div>
             <div class="images-group">
-                <a class="odd" href="../statistics-images/3.jpg" data-lightbox="UCLan"><img src="../statistics-images/3.jpg" alt=""></a>
-                <a class="even" href="../statistics-images/4.jpg" data-lightbox="UCLan"><img src="../statistics-images/4.jpg" alt=""></a>
-                <a class="odd" href="../statistics-images/5.jpg" data-lightbox="UCLan"><img src="../statistics-images/5.jpg" alt=""></a>
-                <a class="even" href="../statistics-images/6.jpg" data-lightbox="UCLan"><img src="../statistics-images/6.jpg" alt=""></a>
+                <a class="odd" href="3.jpg" data-lightbox="UCLan"><img src="3.jpg" alt=""></a>
+                <a class="even" href="4.jpg" data-lightbox="UCLan"><img src="4.jpg" alt=""></a>
+                <a class="odd" href="5.jpg" data-lightbox="UCLan"><img src="5.jpg" alt=""></a>
+                <a class="even" href="6.jpg" data-lightbox="UCLan"><img src="6.jpg" alt=""></a>
             </div>
         </div>
 
@@ -87,13 +87,13 @@
             <div class="co-organizers">
                 <div class='photo-roll-container'>
                     <div class='photo-roll'>
-                        <img id="uclan" src="../logos/Uclan-Logo.jpg" alt="UCLan Cyprus" onclick="window.open('http://www.uclancyprus.ac.cy/en/')" title="Επισκέψου την Ιστοσελίδα">
-                        <img src="../logos/CUT-logo.png" alt="Τεχνολογικό Πανεπιστήμιο Κύπρου" onclick="window.open('http://www.cut.ac.cy/?languageId=1')" title="Επισκέψου την Ιστοσελίδα">
-                        <img src="../logos/University%20of%20Cyprus-Logo.png" alt="University of Cyprus" onclick="window.open('http://www.ucy.ac.cy/el/')" title="Επισκέψου την Ιστοσελίδα">
-                        <img src="../logos/Open%20University%20of%20Cyprus-Logo.png" alt="Open University of Cyprus" onclick="window.open('http://www.ouc.ac.cy/')" title="Επισκέψου την Ιστοσελίδα">
-                        <img class="big" src="../logos/Frederick%20University-Logo.png" alt="Frederick University" onclick="window.open('http://www.frederick.ac.cy/')" title="Επισκέψου την Ιστοσελίδα">
-                        <img id="eur" class="big" src="../logos/European%20University%20of%20Cyprus-Logo.png" alt="European University of Cyprus" onclick="window.open('http://www.euc.ac.cy/')" title="Επισκέψου την Ιστοσελίδα">
-                        <img id="nic" src="../logos/University%20of%20Nicosia-Logo.png" alt="University of Nicosia" onclick="window.open('https://www.unic.ac.cy/')" title="Επισκέψου την Ιστοσελίδα">
+                        <img id="uclan" src="Uclan-Logo.jpg" alt="UCLan Cyprus" onclick="window.open('http://www.uclancyprus.ac.cy/en/')" title="Επισκέψου την Ιστοσελίδα">
+                        <img src="CUT-logo.png" alt="Τεχνολογικό Πανεπιστήμιο Κύπρου" onclick="window.open('http://www.cut.ac.cy/?languageId=1')" title="Επισκέψου την Ιστοσελίδα">
+                        <img src="University%20of%20Cyprus-Logo.png" alt="University of Cyprus" onclick="window.open('http://www.ucy.ac.cy/el/')" title="Επισκέψου την Ιστοσελίδα">
+                        <img src="Open%20University%20of%20Cyprus-Logo.png" alt="Open University of Cyprus" onclick="window.open('http://www.ouc.ac.cy/')" title="Επισκέψου την Ιστοσελίδα">
+                        <img class="big" src="Frederick%20University-Logo.png" alt="Frederick University" onclick="window.open('http://www.frederick.ac.cy/')" title="Επισκέψου την Ιστοσελίδα">
+                        <img id="eur" class="big" src="European%20University%20of%20Cyprus-Logo.png" alt="European University of Cyprus" onclick="window.open('http://www.euc.ac.cy/')" title="Επισκέψου την Ιστοσελίδα">
+                        <img id="nic" src="University%20of%20Nicosia-Logo.png" alt="University of Nicosia" onclick="window.open('https://www.unic.ac.cy/')" title="Επισκέψου την Ιστοσελίδα">
                     </div>
                 </div>
             </div>
@@ -102,11 +102,11 @@
     </div>
 
     <!-- JAVASCRIPT -->
-    <script src="../js/jquery-3.2.1.min.js"></script>
-    <script src="../js/topNav.js"></script>
-    <script src="../js/jquery.viewportchecker.js"></script>
-    <script src="../js/animateAndSlider.js"></script>
-    <script src="../lightbox/dist/js/lightbox.js"></script>
+    <script src="jquery-3.2.1.min.js"></script>
+    <script src="topNav.js"></script>
+    <script src="jquery.viewportchecker.js"></script>
+    <script src="animateAndSlider.js"></script>
+    <script src="lightbox.js"></script>
 
     <script>
         var slideIndex = 1;
