--- a/papers.html
+++ b/papers.html
@@ -89,13 +89,13 @@
             <div class="co-organizers">
                 <div class='photo-roll-container'>
                     <div class='photo-roll'>
-                        <img id="uclan" src="logos/Uclan-Logo.jpg" alt="UCLan Cyprus" onclick="window.open('http://www.uclancyprus.ac.cy/en/')" title="Επισκέψου την Ιστοσελίδα">
-                        <img src="logos/CUT-logo.png" alt="Τεχνολογικό Πανεπιστήμιο Κύπρου" onclick="window.open('http://www.cut.ac.cy/?languageId=1')" title="Επισκέψου την Ιστοσελίδα">
-                        <img src="logos/University%20of%20Cyprus-Logo.png" alt="University of Cyprus" onclick="window.open('http://www.ucy.ac.cy/el/')" title="Επισκέψου την Ιστοσελίδα">
-                        <img src="logos/Open%20University%20of%20Cyprus-Logo.png" alt="Open University of Cyprus" onclick="window.open('http://www.ouc.ac.cy/')" title="Επισκέψου την Ιστοσελίδα">
-                        <img class="big" src="logos/Frederick%20University-Logo.png" alt="Frederick University" onclick="window.open('http://www.frederick.ac.cy/')" title="Επισκέψου την Ιστοσελίδα">
-                        <img id="eur" class="big" src="logos/European%20University%20of%20Cyprus-Logo.png" alt="European University of Cyprus" onclick="window.open('http://www.euc.ac.cy/')" title="Επισκέψου την Ιστοσελίδα">
-                        <img id="nic" src="logos/University%20of%20Nicosia-Logo.png" alt="University of Nicosia" onclick="window.open('https://www.unic.ac.cy/')" title="Επισκέψου την Ιστοσελίδα">
+                        <img id="uclan" src="Uclan-Logo.jpg" alt="UCLan Cyprus" onclick="window.open('http://www.uclancyprus.ac.cy/en/')" title="Επισκέψου την Ιστοσελίδα">
+                        <img src="CUT-logo.png" alt="Τεχνολογικό Πανεπιστήμιο Κύπρου" onclick="window.open('http://www.cut.ac.cy/?languageId=1')" title="Επισκέψου την Ιστοσελίδα">
+                        <img src="University%20of%20Cyprus-Logo.png" alt="University of Cyprus" onclick="window.open('http://www.ucy.ac.cy/el/')" title="Επισκέψου την Ιστοσελίδα">
+                        <img src="Open%20University%20of%20Cyprus-Logo.png" alt="Open University of Cyprus" onclick="window.open('http://www.ouc.ac.cy/')" title="Επισκέψου την Ιστοσελίδα">
+                        <img class="big" src="Frederick%20University-Logo.png" alt="Frederick University" onclick="window.open('http://www.frederick.ac.cy/')" title="Επισκέψου την Ιστοσελίδα">
+                        <img id="eur" class="big" src="European%20University%20of%20Cyprus-Logo.png" alt="European University of Cyprus" onclick="window.open('http://www.euc.ac.cy/')" title="Επισκέψου την Ιστοσελίδα">
+                        <img id="nic" src="University%20of%20Nicosia-Logo.png" alt="University of Nicosia" onclick="window.open('https://www.unic.ac.cy/')" title="Επισκέψου την Ιστοσελίδα">
                     </div>
                 </div>
             </div>
