--- a/venue.html
+++ b/venue.html
@@ -56,7 +56,7 @@
                 <div class="cnt">
                     <img class="mySlides" src="uclan_cyprus.jpg" style="width:100%">
                     <img class="mySlides" src="uclan_cyprus2.jpg" style="width:100%">
-                    <img class="mySlides" src="uclan_cyprus3.jpg" style="width:100%">
+                    <img class="mySlides" src="uc3.jpg" style="width:100%">
 
 
                     <button class="left-btn" onclick="plusDivs(-1)">&#10094;</button>
