--- a/venue.html
+++ b/venue.html
@@ -63,7 +63,7 @@
                 <div class="cnt">
                     <img class="mySlides" src="uclan_cyprus.jpg">
                     <img class="mySlides" src="uclan_cyprus2.jpg">
-                    <img class="mySlides" src="uclan_cyprus3.jpg">
+                    <img class="mySlides" src="map.jpg">
 
                     <button class="left-btn" onclick="plusDivs(-1)">&#10094;</button>
                     <button class="right-btn" onclick="plusDivs(1)">&#10095;</button>
