--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
         <!-- CONTAINER THAT HOLDS THE INTRODUCTION -->
         <div class="container">
 
-            <p class="introduction">Με σκοπό την προώθηση της έρευνας και τη διάδοση της επιστημονικής γνώσης που αφορά τη Στατιστική Επιστήμη, οι ακαδημαϊκοί των δημόσιων και ιδιωτικών πανεπιστημίων της Κύπρου των οποίων τα ερευνητικά ενδιαφέροντα αφορούν την περιοχή της στατιστικής, διοργανώνουν την 1<sup>η</sup> Παγκύπρια Ημερίδα Στατιστικής που θα πραγματοποιηθεί στις εγκαταστάσεις του Πανεπιστημίου UCLan Cyprus την 1<sup>η</sup> Ιουνίου 2018. Το θέμα της ημερίδας είναι:</p>
+            <p class="introduction">Με σκοπό την προώθηση της έρευνας και τη διάδοση της επιστημονικής γνώσης που αφορά τη Στατιστική Επιστήμη, οι ακαδημαϊκοί των δημόσιων και ιδιωτικών πανεπιστημίων της Κύπρου των οποίων τα ερευνητικά ενδιαφέροντα αφορούν την περιοχή της Στατιστικής, διοργανώνουν την <b>1<sup>η</sup> Παγκύπρια Ημερίδα Στατιστικής</b> που θα πραγματοποιηθεί στις εγκαταστάσεις του Πανεπιστημίου UCLan Cyprus την 1<sup>η</sup> Ιουνίου 2018. Το θέμα της ημερίδας είναι:</p>
 
-            <div id="center" class="introduction"><span id="main-title"><b><i>« Θεωρία και Εφαρμογές της Στατιστικής Επιστήμης »</i></b></span>
+            <div id="center-title" class="introduction"><span id="main-title"><b><i>« Θεωρία και Εφαρμογές της Στατιστικής Επιστήμης »</i></b></span>
             </div>
 
             <p class="introduction">Η ημερίδα απευθύνεται σε ακαδημαϊκούς, μεταπτυχιακούς φοιτητές καθώς και επιχειρηματικούς οργανισμούς των οποίων το αντικείμενο σχετίζεται με τη Στατιστική και τις εφαρμογές της. Οι συμμετέχοντες θα έχουν την ευκαιρία να παρουσιάσουν τις ακαδημαϊκές τους εργασίες, να επικοινωνήσουν, να αλληλεπιδράσουν, να συζητήσουν και να αναπτύξουν καινούριες συνεργασίες. Παράλληλα, μέσα από τις εργασίες της ημερίδας, η ακαδημαϊκή κοινότητα των στατιστικών καθώς και οι σχετικές με τη στατιστική επιχειρήσεις, θα μπορέσουν να γνωριστούν, να ανταλλάξουν γνώσεις και απόψεις και να αναζητήσουν τρόπους συνεργασίας.</p>
@@ -72,12 +72,12 @@
             </div>
 
 
-            <div class="introduction">Η Οργανωτική Επιτροπή της ημερίδας επιδιώκει την υποβολή επιστημονικών εργασιών υψηλού επιπέδου οι οποίες να προάγουν τη θεωρία και τις εφαρμογές της Στατιστικής Επιστήμης.<br><a class="more-btn" href="papers.html">Περισσότερα...</a></div>
+            <div class="introduction">Η Οργανωτική Επιτροπή της 1<sup>ης</sup> Παγκύπριας Ημερίδας Στατιστικής επιδιώκει την υποβολή επιστημονικών εργασιών υψηλού επιπέδου οι οποίες να προάγουν τη θεωρία και τις εφαρμογές της Στατιστικής Επιστήμης.<br><a class="more-btn" href="papers.php">Περισσότερα...</a></div>
 
             <div id="center" class="introduction"><span><b><i>Χώρος διεξαγωγής</i></b></span>
             </div>
 
-            <div class="introduction">Tο UCLan Cyprus λειτουργεί από τον Οκτώβριο του 2012 ως εγγεγραμμένο Iδιωτικό Πανεπιστήμιο στην Κύπρο, προσφέροντας άριστη βρετανική ανώτατη εκπαίδευση σε πτυχιακό και μεταπτυχιακό επίπεδο. Στρατηγικό όραμά του είναι να οικοδομήσει ένα κορυφαίο, σύγχρονο πανεπιστήμιο, αναγνωρισμένο για την παροχή μιας μοναδικής φοιτητικής εμπειρίας, καθώς και για την προσφορά του στη διεθνή έρευνα και καινοτόμο μάθηση. Επιμέρους στόχος είναι η ανάδειξη της Κύπρου ως διεθνές εκπαιδευτικό κέντρο.<br> <a class="more-btn" href="venue.html">Περισσότερα...</a></div>
+            <div class="introduction">Tο UCLan Cyprus λειτουργεί από τον Οκτώβριο του 2012 ως εγγεγραμμένο Iδιωτικό Πανεπιστήμιο στην Κύπρο, προσφέροντας άριστη βρετανική ανώτατη εκπαίδευση σε πτυχιακό και μεταπτυχιακό επίπεδο. Στρατηγικό όραμά του είναι να οικοδομήσει ένα κορυφαίο, σύγχρονο πανεπιστήμιο, αναγνωρισμένο για την παροχή μιας μοναδικής φοιτητικής εμπειρίας, καθώς και για την προσφορά του στη διεθνή έρευνα και καινοτόμο μάθηση. Επιμέρους στόχος είναι η ανάδειξη της Κύπρου ως διεθνές εκπαιδευτικό κέντρο.<br> <a class="more-btn" href="venue.php">Περισσότερα...</a></div>
 
 
         </div>
