--- a/program.html
+++ b/program.html
@@ -58,7 +58,7 @@
     <div class="content-container">
         <div class="container">
 
-            <p class="introduction">Το πρόγραμμα Θα ανακοινωθεί αργότερα
+            <p class="introduction">Το πρόγραμμα θα ανακοινωθεί αργότερα
             </p>
         </div>
     </div>
