--- a/registration.html
+++ b/registration.html
@@ -55,7 +55,7 @@
     <div class="content-container">
         <div class="container">
 
-            <p class="introduction">Οι ενδιαφερόμενοι συμμετέχοντες θα πρέπει από 01/02/2018 μέχρι 01/04/2018 να έχουν συμπληρώσει την παρακάτω δήλωση συμμετοχής. Το κόστος της συμμετοχής ανέρχεται στα 20 ευρώ και αυτό θα καταβληθεί κατά την εγγραφή των συμμετεχόντων την ημέρα της εκδήλωσης. Το κόστος συμμετοχής στο δείπνο ανέρχεται στα 30 ευρώ.
+            <p class="introduction">Οι ενδιαφερόμενοι συμμετέχοντες θα πρέπει από <b>01/02/2018</b> μέχρι <b>01/04/2018</b> να έχουν συμπληρώσει την παρακάτω δήλωση συμμετοχής.<br> Το κόστος συμμετοχής στην ημερίδα ανέρχεται στα 20 ευρώ και το κόστος συμμετοχής στο δείπνο στα 30 ευρώ. Το συνολικό ποσό θα καταβληθεί κατά την εγγραφή των συμμετεχόντων την ημέρα της εκδήλωσης.
             </p>
         </div>
     </div>
