--- a/sponsors.html
+++ b/sponsors.html
@@ -48,20 +48,24 @@
     <!-- END OF DESKTOP TOP-NAV -->
 
     <div class="pagination">
-       <div class="pagination-container">
-        <div class="holder"><i class="fa fa-handshake-o" aria-hidden="true"></i> Χορηγοί
-        </div>
+        <div class="pagination-container">
+            <div class="holder"><i class="fa fa-handshake-o" aria-hidden="true"></i> Χορηγοί
+            </div>
         </div>
     </div>
 
-   <div class="content-container">
+    <div class="content-container">
 
         <!-- CONTAINER THAT HOLDS THE INTRODUCTION -->
         <div class="container">
+            <div class="sponsors-container">
 
-            <p class="introduction">Οι χορηγοί Θα ανακοινωθούν αργότερα</p>
+                <img src="UCLan.jpg" title="Επισκέψου την Ιστοσελίδα" alt="UCLan Cyprus" onclick="window.open('http://www.uclancyprus.ac.cy/en/')">
+                <img src="InSPIRE.jpg" title="Επισκέψου την Ιστοσελίδα" alt="INSPIRE" onclick="window.open('http://inspirecenter.org/')">
 
-            
+
+            </div>
+
 
         </div>
 
