--- a/papers.html
+++ b/papers.html
@@ -55,7 +55,7 @@
     <div class="content-container">
         <div class="container">
 
-            <div class="introduction">Η Οργανωτική Επιτροπή της ημερίδας επιδιώκει την υποβολή επιστημονικών εργασιών υψηλού επιπέδου οι οποίες να προάγουν τη θεωρία και τις εφαρμογές της Στατιστικής Επιστήμης.<br><br> Θεματικές ενότητες της Ημερίδας:<br>
+            <div class="introduction">Η Οργανωτική Επιτροπή της 1<sup>ης</sup> Παγκύπριας Ημερίδας Στατιστικής επιδιώκει την υποβολή επιστημονικών εργασιών υψηλού επιπέδου οι οποίες να προάγουν τη θεωρία και τις εφαρμογές της Στατιστικής Επιστήμης.<br><br> Θεματικές ενότητες της Ημερίδας:<br>
                 <ul class="push-left" id="not-jus">
                     <li>Αναλυτική των Επιχειρήσεων</li>
                     <li>Ανάλυση Δεδομένων</li>
