--- a/index.html
+++ b/index.html
@@ -72,12 +72,12 @@
             </div>
 
 
-            <div class="introduction">Η Οργανωτική Επιτροπή της 1<sup>ης</sup> Παγκύπριας Ημερίδας Στατιστικής επιδιώκει την υποβολή επιστημονικών εργασιών υψηλού επιπέδου οι οποίες να προάγουν τη θεωρία και τις εφαρμογές της Στατιστικής Επιστήμης.<br><a class="more-btn" href="papers.php">Περισσότερα...</a></div>
+            <div class="introduction">Η Οργανωτική Επιτροπή της 1<sup>ης</sup> Παγκύπριας Ημερίδας Στατιστικής επιδιώκει την υποβολή επιστημονικών εργασιών υψηλού επιπέδου οι οποίες να προάγουν τη θεωρία και τις εφαρμογές της Στατιστικής Επιστήμης.<br><a class="more-btn" href="papers.html">Περισσότερα...</a></div>
 
             <div id="center" class="introduction"><span><b><i>Χώρος διεξαγωγής</i></b></span>
             </div>
 
-            <div class="introduction">Tο UCLan Cyprus λειτουργεί από τον Οκτώβριο του 2012 ως εγγεγραμμένο Iδιωτικό Πανεπιστήμιο στην Κύπρο, προσφέροντας άριστη βρετανική ανώτατη εκπαίδευση σε πτυχιακό και μεταπτυχιακό επίπεδο. Στρατηγικό όραμά του είναι να οικοδομήσει ένα κορυφαίο, σύγχρονο πανεπιστήμιο, αναγνωρισμένο για την παροχή μιας μοναδικής φοιτητικής εμπειρίας, καθώς και για την προσφορά του στη διεθνή έρευνα και καινοτόμο μάθηση. Επιμέρους στόχος είναι η ανάδειξη της Κύπρου ως διεθνές εκπαιδευτικό κέντρο.<br> <a class="more-btn" href="venue.php">Περισσότερα...</a></div>
+            <div class="introduction">Tο UCLan Cyprus λειτουργεί από τον Οκτώβριο του 2012 ως εγγεγραμμένο Iδιωτικό Πανεπιστήμιο στην Κύπρο, προσφέροντας άριστη βρετανική ανώτατη εκπαίδευση σε πτυχιακό και μεταπτυχιακό επίπεδο. Στρατηγικό όραμά του είναι να οικοδομήσει ένα κορυφαίο, σύγχρονο πανεπιστήμιο, αναγνωρισμένο για την παροχή μιας μοναδικής φοιτητικής εμπειρίας, καθώς και για την προσφορά του στη διεθνή έρευνα και καινοτόμο μάθηση. Επιμέρους στόχος είναι η ανάδειξη της Κύπρου ως διεθνές εκπαιδευτικό κέντρο.<br> <a class="more-btn" href="venue.html">Περισσότερα...</a></div>
 
 
         </div>
