--- a/dates.html
+++ b/dates.html
@@ -54,8 +54,10 @@
     </div>
 
 
-    <div class="content-container">
-        <div class="introduction">Έναρξη Εγγραφών:<br> <b>01/02/2018</b><br><br> Έναρξη Υποβολής Εργασιών:<br> <b>01/02/2018</b><br><br>Λήξη Υποβολής Δήλωσης Συμμετοχής:<br><b>01/04/2018</b><br><br> Λήξη Υποβολής Εργασιών:<br> <b>01/05/2018</b><br><br> Ανακοίνωση Τελικού Προγράμματος:<br> <b>15/04/2018</b><br><br>
+     <div class="content-container">
+        <div class="container">
+            <div class="introduction">Έναρξη Εγγραφών:<br> <b>01/02/2018</b><br><br> Έναρξη Υποβολής Εργασιών:<br> <b>01/02/2018</b><br><br>Λήξη Υποβολής Δήλωσης Συμμετοχής:<br><b>01/04/2018</b><br><br> Λήξη Υποβολής Εργασιών:<br> <b>01/05/2018</b><br><br> Ανακοίνωση Τελικού Προγράμματος:<br> <b>15/04/2018</b><br><br>
+            </div>
         </div>
     </div>
     <!-- END OF CONTAINER THAT HOLDS THE INTRODUCTION -->
